<resources>
    <string name="app_name" translatable="false">Edrank</string>
    <string name="teacherName" translatable="false">Dr. Kavita Pabreja</string>
    <string name="your_reviews_are">Your reviews are:</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="txt_error_message" translatable="false">%1$S</string>
    <string name="welcome">Welcome!</string>
    <string name="your_college_rank">Your College Rank</string>
    <string name="provide_your_valuable_feedbacks">Provide your valuable feedbacks</string>
    <string name="teacher">Teacher</string>
    <string name="institute">Institute</string>
    <string name="my_profile">My profile</string>
    <string name="edrank_top_colleges_of_india">EdRank Top colleges of India</string>
    <string name="edrank_top_teachers_of_india">EdRank Top Teachers of India</string>
    <string name="college_feedback_form">College Feedback Form</string>
    <string name="select_teacher_for_feedback">Select teacher for Feedback</string>
    <string name="submit_feedback">Submit feedback</string>
    <string name="batch">Batch</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="contact_number">Contact number</string>
    <string name="email">Email</string>
    <string name="reset_password">Reset password</string>
    <string name="logout">Logout</string>
    <string name="grievance_cell">GRIEVANCE CELL</string>
    <string name="complaint_about">Complaint About :</string>
    <string name="college_institution">College / Institution</string>
    <string name="what_issue_you_want_to_report">What Issue you want to report?</string>
    <string name="if_other_then_what">If \'Other\' then what?</string>
    <string name="did_you_report_this_issue_to_class_coordinator">Did you report this issue to Class Coordinator ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="if_yes_then_what_action_was_taken">If \'Yes\' then what action was taken?</string>
    <string name="attach_any_proof_if_any">Attach any Proof (if any)</string>
    <string name="notice_you_should_not_report_any_misinformation_here_anyone_found_guilty_will_face_serious_consequences">NOTICE : You should not report any misinformation here, anyone found guilty will face serious consequences.</string>
    <string name="subject_of_your_application_max_50_words">Subject of your Application (max : 50 words)</string>
    <string name="explain_issue_max_300_words">Explain Issue (max : 300 words)</string>
    <string name="text">Text</string>
    <string name="hello_there_you_are">Hello there, you are</string>
    <string name="tap_to_check_profile">(Tap to check Profile)</string>
    <string name="parent_gaurdian_of">Parent / Gaurdian of</string>
    <string name="view_more">View more</string>
    <string name="your_progress">Your progress</string>
    <string name="your_rank">Your Rank</string>
    <string name="reviews">Reviews</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="this_semester">THIS SEMESTER</string>
    <string name="login_to_edrank">Login to Edrank</string>
    <string name="password">Password</string>
    <string name="login_as">Login as</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="reviews_given_to_you_by_students">Reviews given to you by students</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="your_standings">Your Standings</string>
    <string name="college_rank">College Rank</string>
    <string name="state_rank">State Rank</string>
    <string name="all_india_rank">All India Rank</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="questions">Questions</string>
    <string name="edrank_leaderboard">EdRank Leaderboard</string>
    <string name="give_feedback">Give Feedback</string>
    <string name="your_feedbacks_will_directly_be_analysed_by_the_the_higher_officers_any_misinformation_mus_not_be_shared">Your Feedbacks will directly be analysed by the the higher officers. Any misinformation mus not be shared.</string>
    <string name="select_one" translatable="false">Select one</string>
    <string name="view_the_credentials_for_tenants">View the credentials for users</string>

</resources>