<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="center"
                android:src="@drawable/ic_bannerchanged" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="14sp"
            android:paddingHorizontal="25dp"
            android:text="@string/hello_there_you_are"
            android:textStyle="italic" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            app:cardBackgroundColor="@color/gray"
            app:cardCornerRadius="8dp">


            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/myProfile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ic_artboard_2"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/studentName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="10dp"
                    android:padding="5dp"
                    android:text="Samridhi Kotnala"
                    android:textColor="#02515A"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/instituteName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/teacherName"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginBottom="10dp"
                    android:paddingHorizontal="5dp"
                    android:text="@string/tap_to_check_profile"
                    android:textColor="#02515A"
                    android:textSize="14sp"
                    android:textStyle="italic" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="25dp"
            android:layout_marginTop="12dp"
            android:text="@string/parent_gaurdian_of"
            android:textStyle="italic"
            />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/white"
            android:orientation="vertical">


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/childrenRv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="6dp"
                tools:itemCount="5"
                tools:listitem="@layout/item_children_details" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/white"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginVertical="20dp"
                android:orientation="vertical"
                app:cardCornerRadius="8dp">


                <LinearLayout
                    android:id="@+id/grievanceCellBtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#FFD9C0"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="center"
                        android:src="@drawable/ic_grievance_banner" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:padding="5dp"
                android:text="@string/edrank_top_colleges_of_india"
                android:textColor="@color/textgray"
                android:textSize="17sp"
                android:textStyle="bold" />

            <com.github.ybq.android.spinkit.SpinKitView
                android:id="@+id/progress_bar"
                style="@style/SpinKitView.ThreeBounce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:indeterminate="true"
                android:visibility="gone"
                app:SpinKit_Color="@color/black" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/topCollegeParentRv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                tools:listitem="@layout/item_top_colleges" />

            <TextView
                android:id="@+id/viewMoreTopCollege"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="7dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/view_more"
                android:textAllCaps="true"
                android:textColor="#106714"
                android:textSize="14sp"
                android:textStyle="bold|italic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:padding="5dp"
                android:text="@string/edrank_top_teachers_of_india"
                android:textColor="@color/textgray"
                android:textSize="17sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/topTeacherRv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                tools:listitem="@layout/item_top_colleges" />

            <TextView
                android:id="@+id/viewMoreTopTeachers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="7dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/view_more"
                android:textAllCaps="true"
                android:textColor="#106714"
                android:textSize="14sp"
                android:textStyle="bold|italic"
                android:layout_marginBottom="20dp" />




        </LinearLayout>
    </LinearLayout>
</ScrollView>