<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray"
        android:orientation="vertical">

        <TextView
            android:id="@+id/formTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/college_feedback_form"
            android:textAllCaps="true"
            android:textColor="#DA000000"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/selectTeacherTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/select_teacher_for_feedback"
            android:textColor="#000"
            android:textSize="17sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/selectTeacher"
            style="@android:style/Widget.Material.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:backgroundTint="@color/black" />

        <!--        Teachers already finished with feedbacks-->

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/questionsRv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/item_feedback_questions" />

        <TextView
            android:id="@+id/thoughtsTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/form_border_style"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:text="Your thoughts about the teacher"
            android:textColor="#000"
            android:textSize="17sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/feedbackText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:hint="Enter your text here..."
            android:textColor="#000"
            android:textSize="17sp" />

        <Button
            android:id="@+id/submitBtn"
            style="@style/Widget.Material3.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/black"
            android:text="@string/submit_feedback"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:layout_marginBottom="30dp"
            android:textSize="16sp" />


        <com.github.ybq.android.spinkit.SpinKitView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/progress_bar"
            style="@style/SpinKitView.ThreeBounce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:visibility="gone"
            app:SpinKit_Color="@color/black" />

    </LinearLayout>

</ScrollView>